[package]
name = "egui_infinite_scroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
egui_extras = ["dep:egui_extras"]

[dependencies]
egui_inbox = { path = "../egui_inbox" }
egui_virtual_list = { path = "../egui_virtual_list" }

egui = { git = "https://github.com/emilk/egui", branch = "master", default-features = false }
egui_extras = { git = "https://github.com/emilk/egui", branch = "master", default-features = false, optional = true }

[dev-dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

