[package]
name = "egui_taffy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master", default-features = false }
taffy = "0.3"

[dev-dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
rand = "0.8.5"

