[package]
name = "egui_virtual_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = { git = "https://github.com/emilk/egui", branch = "master", default-features = false }

[dev-dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master" }
